# orangec-setup

./: CMakeLists.txt  README.md  README.ru.md  action.yml  build-test-run.bat  clean-build.bat  hello++.cpp  run-build-test.bat
.github/workflows/: cmake-multi-platform.yml
OrangeC/: README.md  README.ru.md  _patches_.cmake  _support_.cmake  detect.cmake  install.cmake  uninstall.cmake
tests/: CMakeLists.txt
